src/objects/Baby_Activity__c.object
<CustomObject>
    <description>Used for tracking baby stuff</description>
    <fields>
        <fullName>Age_Weeks__c</fullName>
        <formula>TEXT( FLOOR((BLANKVALUE( Date__c , TODAY()) - Baby__r.Birthdate) / 7)) &amp; &apos; weeks old&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Weeks)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_ML__c</fullName>
        <label>Amount (ML)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_OZ__c</fullName>
        <formula>Amount_ML__c /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (OZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Returns Feed Amount or Hours Slept based on record type of the record</description>
        <formula>CASE( RecordType.DeveloperName , 
&apos;Feed&apos;,  TEXT(Amount_ML__c) &amp; &apos; (ml)&apos;, 
&apos;Sleep&apos;,  IF(!ISBLANK( Sleep_End_Datetime__c ), TEXT(Hours_Slept__c) &amp; &apos; hours&apos;, &apos;In progress...&apos;) , 
&apos;Play&apos;,  IF(!ISBLANK( Sleep_End_Datetime__c ), TEXT(Hours_Slept__c) &amp; &apos; hours&apos;, &apos;In progress...&apos;) , 
&apos;&apos;)</formula>
        <inlineHelpText>Returns Feed Amount or Hours Slept based on record type of the record</inlineHelpText>
        <label>Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Baby</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Baby Activities</relationshipLabel>
        <relationshipName>Baby_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date / Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(TEXT( Date_Time__c - 4/24) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Food_Type__c</fullName>
        <label>Food Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breastmilk</fullName>
                    <default>true</default>
                    <label>Breastmilk</label>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Slept__c</fullName>
        <formula>ROUND((Sleep_End_Datetime__c - Date_Time__c)*24,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Slept</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&apos;Sleep&apos;,&apos;💤&apos;, 
&apos;Feed&apos;, &apos;🐽&apos;,
&apos;Play&apos;, &apos;️⚽️&apos;,
&apos;Heal&apos;, &apos;💉&apos;,
&apos;💨&apos;)</formula>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicine_Amount__c</fullName>
        <label>Medicine Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicine_Units__c</fullName>
        <inlineHelpText>Unit of measure for meds</inlineHelpText>
        <label>Medicine Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>IU</fullName>
                </value>
                <value>
                    <fullName>OZ</fullName>
                </value>
                <value>
                    <fullName>Pill</fullName>
                </value>
                <value>
                    <fullName>Dose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicine__c</fullName>
        <label>Medicine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tylenol</fullName>
                </value>
                <value>
                    <fullName>Eye Drops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Milestone Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleep_End_Datetime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>TIMEVALUE(Date_Time__c - 4/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Vitamin_D_Drops__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vitamin D Drops</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitamin_D_IU__c</fullName>
        <description>Calculates the amount of Vitamin D IUs per feed</description>
        <formula>IF(  ISPICKVAL(Food_Type__c, &apos;Breastmilk&apos;)   , 
 Vitamin_D_Drops__c *  $Setup.CT_Defaults__c.Vitamin_D_per_Drop__c 
,  Amount_ML__c *  $Setup.CT_Defaults__c.Vitamin_D_Per_Formula__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vitamin D IU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Baby Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Icon__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Sleep_End_Datetime__c</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>Food_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Today</fullName>
        <columns>NAME</columns>
        <columns>Icon__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Sleep_End_Datetime__c</columns>
        <columns>Amount__c</columns>
        <columns>Food_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today</label>
    </listViews>
    <listViews>
        <fullName>Feeds_Today</fullName>
        <columns>NAME</columns>
        <columns>Amount_ML__c</columns>
        <columns>Amount_OZ__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Food_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Baby_Activity__c.Feed</value>
        </filters>
        <label>Feeds Today</label>
    </listViews>
    <listViews>
        <fullName>Sleeps_Today</fullName>
        <columns>NAME</columns>
        <columns>Icon__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Sleep_End_Datetime__c</columns>
        <columns>Hours_Slept__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Baby_Activity__c.Sleep</value>
        </filters>
        <label>Sleeps Today</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baby Activities</pluralLabel>
    <recordTypes>
        <fullName>Feed</fullName>
        <active>true</active>
        <label>Feed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Heal</fullName>
        <active>true</active>
        <label>Heal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone</fullName>
        <active>true</active>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Play</fullName>
        <active>true</active>
        <label>Play</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sleep</fullName>
        <active>true</active>
        <label>Sleep</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;Feed&apos; &amp;&amp; ( ISBLANK(Amount_ML__c) || Amount_ML__c = 0)</errorConditionFormula>
        <errorDisplayField>Amount_ML__c</errorDisplayField>
        <errorMessage>Amount is required for a feeding record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Time_must_be_after_start</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Sleep&apos; &amp;&amp;
 Date_Time__c  &gt;  Sleep_End_Datetime__c
&amp;&amp; NOT(ISBLANK(Sleep_End_Datetime__c))</errorConditionFormula>
        <errorDisplayField>Sleep_End_Datetime__c</errorDisplayField>
        <errorMessage>End time must be after start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sleep_record_requires_end_time</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Sleep&apos; &amp;&amp;
ISBLANK(Sleep_End_Datetime__c)</errorConditionFormula>
        <errorDisplayField>Sleep_End_Datetime__c</errorDisplayField>
        <errorMessage>Sleep End time is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vitamin_D_Drops</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISPICKVAL(Food_Type__c, &apos;Breastmilk&apos;)  ) &amp;&amp;  Vitamin_D_Drops__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Vitamin_D_Drops__c</errorDisplayField>
        <errorMessage>Vitamin D drops should only be added to breastmilk feeds</errorMessage>
    </validationRules>
</CustomObject>